--- a/tex/body/Z01-Afterword.tex
+++ b/tex/body/Z01-Afterword.tex
@@ -1,9 +1,11 @@
+\clearpage{\pagestyle{empty}\cleardoublepage}
 \setcounter{page}{1}
-\pagestyle{empty}
+\label{afterword}\pdfbookmark{重排后记}{afterword}
 \begin{center}
   \zihao{3}\xbsong 重~排~后~记
 \end{center}
 \vspace{1em}
+
 
 
 《力学概论》，方励之、李淑娴合著，安徽科学技术出版社出版。1986年1月第一次出版。
@@ -31,7 +33,7 @@
 本人参与修订。
 
 \clearpage
-
+\label{tips}\pdfbookmark{特别提示}{tips}
 \heiti \zihao{4}
 \begin{center}
     ~\\
