--- a/tex/outline-of-mechanics.tex
+++ b/tex/outline-of-mechanics.tex
@@ -6,18 +6,24 @@
 
 % 封面
 \includepdf{body/F00-Frontpage.pdf}
+\bookmark[page=1,level=0]{封面}
 
 % 标题页
 \includepdf{body/F01-Titlepage.pdf}
+\bookmark[page=2,level=0]{封页}
 
 % 出版信息页
 \input{body/F02-Publish Information}
+\bookmark[page=3,level=0]{出版信息}
 
 % 内容提要
 \input{body/F03-Abstract}
+\bookmark[page=4,level=0]{内容提要}
+
 
 % 序言
 \input{body/F04-Foreword}
+\bookmark[page=5,level=0]{序}
 
 % 目录
 \clearpage
@@ -81,7 +87,6 @@
 \input{body/M13.00-Answers}
 
 % 重排后记
-\clearpage{\pagestyle{empty}\cleardoublepage}
 \input{body/Z01-Afterword}
 
 % 重排校注
