--- a/tex/body/F04-Foreword.tex
+++ b/tex/body/F04-Foreword.tex
@@ -2,6 +2,7 @@
 \pagestyle{foreword}
 \null\vspace{1em}
 \begin{center}
+    \label{foreword}\pdfbookmark{序}{foreword}
   \zihao{4}\heiti{序}
 
   \null{}
