--- a/tex/outline-of-mechanics.tex
+++ b/tex/outline-of-mechanics.tex
@@ -14,21 +14,19 @@
 
 % 出版信息页
 \input{body/F02-Publish Information}
-\bookmark[page=3,level=0]{出版信息}
 
 % 内容提要
 \input{body/F03-Abstract}
-\bookmark[page=4,level=0]{内容提要}
-
 
 % 序言
 \input{body/F04-Foreword}
-\bookmark[page=5,level=0]{序}
 
 % 目录
 \clearpage
 \setcounter{page}{1}
+\pdfbookmark{目录}{Contents}
 \tableofcontents
+
 
 % 正文
 \clearpage
