修正错误，调整版面

--- a/tex/body/M02.03-Relativity Of Velocity.tex
+++ b/tex/body/M02.03-Relativity Of Velocity.tex
@@ -20,7 +20,7 @@
 \end{figure}
 
 \noindent 其中$d_0$是时间$t=0$时，坐标原点$O$，$O'$间的距离。故坐标变换
-公式为\vspace{-1.5em}
+公式为
 \begin{equation}
   x'=x-ut-d_0 \label{eqn:02.03.01}
 \end{equation}
