--- a/tex/body/M04.00-Gravitation.tex
+++ b/tex/body/M04.00-Gravitation.tex
@@ -1,4 +1,4 @@
-\chapter[万有引力]{万~~有~~引~~力}\label{chp:04}
+\chapter[万有引力]{万\hspace{0.333em}有\hspace{0.333em}引\hspace{0.333em}力}\label{chp:04}
 
 \input{body/M04.01-Kepler's Three Laws Of Planetary Motion}
 \input{body/M04.02-The Establishment Of The Law Of Gravitation}
