--- a/tex/body/M04.04-Unit System And Dimension.tex
+++ b/tex/body/M04.04-Unit System And Dimension.tex
@@ -12,22 +12,21 @@
 我们称长度、质量及时间三个物理量为基本量，它们的单位为基
 本单位，称其他物理量为导出量，相应的单位为导出单位。
 \begin{table}[h]
-    \vspace{-0.4em}
   \caption{}
   \label{tab:04.03}
   \zihao{-5}
-  \begin{tblr}{colsep=1em,colspec={l|X[3]|X[3]|X[2]}}
+  \begin{tblr}{colsep=1.4em,colspec={c|X[3]|X[3]|X[2]}}
     \toprule
-    物理量     & 单位(SI，MKS) & 单位(CGS)  & 量\qquad 纲           \\
+    物理量     & \SetCell{c}单位(SI，MKS) & \SetCell{c}单位(CGS)  & \SetCell{c}量\qquad 纲           \\
     \midrule
     长\quad 度 & 米                          & 厘米                     & $ L $                                 \\
     质\quad 量 & 千克                        & 克                       & $ M $                                 \\
     时\quad 间 & 秒                          & 秒                       & $ T $                                 \\
     速\quad 度 & 米/秒                       & 厘米/秒                  & $ L T ^ { - 1 } $                     \\
-    加速度     & 米/秒\.$^2$                 & 厘米/秒\.$^2$            & $ L T ^ { - 2 } $                     \\
+    加速度     & 米/秒\textsuperscript{2}                 & 厘米/秒\textsuperscript{2}            & $ L T ^ { - 2 } $                     \\
     角速度     & 弧度/秒                     & 弧度/秒                  & $ T ^ { - 1 } $                       \\
     力         & 牛顿                        & 达因                     & $ M L T ^ { - 2 } $                   \\
-    $G$        & 牛顿$\cdot$米$^2$/千克$^2$    & 达因$\cdot$厘米$^2$/克$^2$ & $ L ^ { 3 } M ^ { - 1 } T ^ { - 2 } $ \\
+    $G$        & 牛顿$\cdot$米\textsuperscript{2}/千克\textsuperscript{2}    & 达因$\cdot$厘米\textsuperscript{2}/克\textsuperscript{2} & $ L ^ { 3 } M ^ { - 1 } T ^ { - 2 } $ \\
     \bottomrule
   \end{tblr}
 \vspace{-0.8em}
@@ -39,7 +38,7 @@
 这个单位制称为国际单位制(SI)或米千克秒制(MKS)
 
 另一种常用的单位制，是采用厘米为长度单位，克为质量单
-位，秒为时间单位，称为CGS制。1厘米=1/100米，1克=1/1000千
+位，秒为时间单位，称为CGS制。$ 1 $厘米$ =1/100 $米，$ 1 $克$ =1/1000 $千
 克。有了这一组基本单位之间的换算关系，导出单位的换算关系
 也就确定了。例如，在CGS制中速度单位与SI制中速度单位之
 间的关系为
@@ -58,7 +57,7 @@ $ L / T ^ { 2 } = L T ^ { - 2 } $，每个物理量都对应着一个由$ L , M 
 这个量我们称为该物理量的量纲，从形式上可以说，物理量的量
 纲，就是LMT制中的“单位”。我们习惯用一个方括号表示括号
 中的物理量的量纲，如$ [ v ] = L T ^ { - 1 } , [ a ] = L T ^ { - 2 }$。各量的量纲，也
-列在表\ref{tab:04.03}\,中。
+列在表\ref{tab:04.03}中。
 
 量纲很有用，无论是标量的加减运算，或是矢量的和差，所
 涉及的量都应具有相同的单位，即应有相同的量纲。由此，一个
@@ -71,8 +70,6 @@ $ L / T ^ { 2 } = L T ^ { - 2 } $，每个物理量都对应着一个由$ L , M 
         & = \frac { M L T ^ { - 2 } L ^ { 2 } } { M ^ { 2 } }        \\
         & = M ^ { - 1 } L ^ { 3 } T ^ { - 2 }
 \end{align*}
-
-~ \vspace{-2em}
 
 弧度是根据圆的弧长与其半径之比来定义的，所以它的量纲
 是$ L / L = L ^ { 0 } $，即与$ M , L , T $均无关。这种量，称为无量纲量摩
