--- a/tex/body/M06.03-Gravitational Potential Energy.tex
+++ b/tex/body/M06.03-Gravitational Potential Energy.tex
@@ -1,4 +1,4 @@
-\section{引力势能}\label{sec:06.03}
+\section[引力势能]{引\hspace{0.333em}力\hspace{0.333em}势\hspace{0.333em}能}\label{sec:06.03}
 
 在\ref{sec:06.01}节，我们曾指出，地面附近的质点具有重力势能$ mgz $，
 现在更一般地讨论万有引力势能。
