--- a/tex/body/M06.04-Conservative Force.tex
+++ b/tex/body/M06.04-Conservative Force.tex
@@ -1,4 +1,4 @@
-\section{保守力}\label{sec:06.04}
+\section[保守力]{保\hspace{1em}守\hspace{1em}力}\label{sec:06.04}
 
 我们已经证明在引力作用下，质点的运动遵守下列形式的能
 量守恒：
@@ -119,13 +119,10 @@
   \beforetext{则有} &T _ { b } - T _ { a } = V _ { a } - V _ { b }
 \end{align*}
 再由功的定义
-\begin{equation*}
-  A _ { a \to b } = T _ { b } - T _ { a }
-\end{equation*}
-就得到\vspace{-1.56em}
-\begin{equation*}
-  A _ { a \to b } = V _ { a } - V _ { b }
-\end{equation*}
+\begin{align*}
+  &A _ { a \to b } = T _ { b } - T _ { a } \\
+  \beforetext{就得到} &A _ { a \to b } = V _ { a } - V _ { b }
+\end{align*}
 这就是说，在这种情况下作功仅与始末点有关，而与路径无关，
 故力是保守力。
 
