--- a/tex/body/M06.05-General Properties Of One-Dimensional Motion.tex
+++ b/tex/body/M06.05-General Properties Of One-Dimensional Motion.tex
@@ -16,9 +16,9 @@
 \begin{equation}\label{eqn:06.05.01}
   F = - \frac { \dif V } { \dif x }
 \end{equation}
-或者，凡是能表示成式\eqref{eqn:06.05.01}形式的力一定是保守力。例如，对于
+或者，凡是能表示成式\eqref{eqn:06.05.01}形式的力一定是保守力。例如，对于%
 % 183.jpg
-\clearpage\noindent
+\clearpage\noindent%
 自由落体运动，如果取坐标$ x $为从地面算起的高度，则
 其势能函数分别为
 \begin{equation*}
