--- a/tex/body/M07.00-Vibration.tex
+++ b/tex/body/M07.00-Vibration.tex
@@ -1,4 +1,4 @@
-\chapter[振动]{振\qquad\quad 动}
+\chapter[振动]{振\hspace{3em}动}\label{chp:7}
 
 \input{body/M07.01-Elastic Force}
 \input{body/M07.02-Vibration Solution}
