--- a/tex/body/M07.01-Elastic Force.tex
+++ b/tex/body/M07.01-Elastic Force.tex
@@ -1,4 +1,4 @@
-\section{弹性力}\label{sec:07.01}
+\section[弹性力]{弹\hspace{1em}性\hspace{1em}力}\label{sec:07.01}
 
 提到弹性力，我们自然会想到弹簧的作用。如图\ref{fig:07.01}，它表示
 一个弹簧，左端固定在壁上，右端与质量为$ m $的物体连接在一起。
