--- a/tex/body/M07.02-Vibration Solution.tex
+++ b/tex/body/M07.02-Vibration Solution.tex
@@ -1,4 +1,4 @@
-\section{振动解}\label{sec:07.02}
+\section[振动解]{振\hspace{1em}动\hspace{1em}解}\label{sec:07.02}
 
 本节从动力学基本方程来求解在弹性力作用下的运动。现在
 % 202.jpg
