--- a/tex/body/M07.03-Geometric Expression Of Simple Harmonic Vibration.tex
+++ b/tex/body/M07.03-Geometric Expression Of Simple Harmonic Vibration.tex
@@ -35,6 +35,7 @@
 圆周运动质点的$ x $坐标按简谐振动方式变化。
 
 \begin{wrapfigure}[6]{r}{14em}
+    \vspace{-0.8em}
   \centering
   \includegraphics{figure/fig07.07}
   \caption{简谐振动的几何表述}
