--- a/tex/body/M07.05-Resonance.tex
+++ b/tex/body/M07.05-Resonance.tex
@@ -1,4 +1,4 @@
-\section{共振}\label{sec:07.05}
+\section[共振]{共\hspace{3em}振}\label{sec:07.05}
 
 在有阻力的情况下，振子的振动是衰减的，因此，为了使阻
 尼振子作不衰减的振动，必须时时给它补充能量。补充能量的一
