--- a/tex/body/M08.02-Impulse.tex
+++ b/tex/body/M08.02-Impulse.tex
@@ -1,4 +1,4 @@
-\section[冲量]{冲\qquad 量}\label{sec:08.02}
+\section[冲量]{冲\hspace{3em}量}\label{sec:08.02}
 
 体系能量的变化用外力作的功来描写，体系的动量的变化用
 什么来描写？这就是本节将要讨论的问题。
