--- a/tex/body/M09.00-Conservation of Angular Momentum.tex
+++ b/tex/body/M09.00-Conservation of Angular Momentum.tex
@@ -1,4 +1,4 @@
-\chapter[角动量守恒]{角~动~量~守~恒}\label{chp:09}
+\chapter{角动量守恒}\label{chp:09}
 
 \input{body/M09.01-Conservation of Angular Momentum.tex}
 \input{body/M09.02-Moment}
