--- a/tex/body/M10.02-Translation and Rotation.tex
+++ b/tex/body/M10.02-Translation and Rotation.tex
@@ -101,6 +101,7 @@ $ O $转动角$ \Delta \varphi $，则刚体就完全移到了终点位置$ A_2 
     v = v _ { 0 } - r \omega
 \end{equation}
 \begin{wrapfigure}[8]{r}{13em}
+    \vspace{-0.8em}
     \centering
     \includegraphics{figure/fig10.10}
     \caption{车轮各点的速度}
