--- a/tex/body/M10.04-Rigid Body Equations of Motion.tex
+++ b/tex/body/M10.04-Rigid Body Equations of Motion.tex
@@ -1,4 +1,4 @@
-\section{刚体的运动方程}
+\section{刚体的运动方程}\label{sec:10.4}
 
 在第八章中，我们已经证明，对于任一质点系，其质心运动
 都应满足下列方程
@@ -111,7 +111,7 @@ $ \rho _ { n } = \dfrac { m _ { p } } { \dfrac { 4 \uppi } { 3 } r _ 0 ^ { 3 } }
 \begin{equation*}
     \begin{split}
         \omega _ { 2 } &= \frac { I _ { 1 } } { I _ { 2 } } \omega _ { 1 } \\
-        &= \frac { \dfrac { 2 } { 5 } M _ { \text {日} } R _  {\text{日}} ^2 } { \dfrac { 2 } { 5 } M _ { \text {日} } R ^ { \prime 2 } } \\
+        &= \frac { \dfrac { 2 } { 5 } M _ { \text {日} } R _  {\text{日}} ^2 } { \dfrac { 2 } { 5 } M _ { \text {日} } R ^ { \prime 2 } } \omega _ 1 \\
         &= \left( \frac { R _ { \text {日} } } { R ^ { \prime } } \right) ^ { 2 } \omega _ { 1 } \\
         &= \left( \frac { 6 . 9 5 9 9 \times 1 0 ^ { 8 } } { 1 . 5 9 \times 1 0 ^ { 4 } } \right) ^ { 2 } \times \frac { 2 \uppi } { 2 2 \times 2 4 \times 6 0 \times 6 0 } \\
         &= 6 . 3 3 \times 1 0 ^ { 8 } \text{ 弧度/秒}
