--- a/tex/body/M10.06-Cosider Question.tex
+++ b/tex/body/M10.06-Cosider Question.tex
@@ -19,7 +19,9 @@
 \end{figure}
 
 \question 本章\ref{sec:10.02} 节中指出，为了描写刚体的一般运动，可将运动
-分解为随某选定的基点$ O $的平动加绕$ O $的转动，平动的距离及速
+分解为随某选定的基点$ O $的平动加绕$ O $的转动，平动的距离及
+\clearpage\noindent
+速
 % 311.jpg
 度随基点的不同选择而有所不同，但转过的角度及角速度是与基
 点的选择无关的，这称之为角速度的绝对性。试问：这基点可以
