--- a/tex/body/M10.07-Exercises.tex
+++ b/tex/body/M10.07-Exercises.tex
@@ -26,7 +26,7 @@
 \exercise 证明边长分别为$ a $和$ b $的矩形薄板，绕通过其中心且垂直
 于板面的轴的转动惯量为$ I _ { c } = \dfrac { 1 } { 1 2 } + m \left( a ^ { 2 } + b ^ { 2 } \right)  $，其中$ m $为板的质量。
 % 312.jpg
-
+\clearpage
 \exercise 边长分别为$ a $和$ b $的矩形薄板，质量为$ m $。现在中间挖去
 一个边长为$ c $的正方形。绕通过其几何中心且与板面垂直的轴的
 转动惯量是多少？
