--- a/tex/body/M11.07-Mass-Energy Relation.tex
+++ b/tex/body/M11.07-Mass-Energy Relation.tex
@@ -1,4 +1,4 @@
-\section[质能关系]{质~能~关~系}\label{sec:11.07}
+\section[质能关系]{质\hspace{0.333em}能\hspace{0.333em}关\hspace{0.333em}系}\label{sec:11.07}
 
 本节再讨论相对论力学的另一个重要结论。我们仍从相对论
 的质点运动方程\eqref{eqn:11.06.01}出发。注意其中质量是速度的函数式\lhbrak \eqref{eqn:11.06.12} \rhbrak ，所以
