--- a/tex/body/M12.04-Equivalence Principle.tex
+++ b/tex/body/M12.04-Equivalence Principle.tex
@@ -1,4 +1,4 @@
-\section{等效原理}\label{sec:12.04}
+\section[等效原理]{等\hspace{0.333em}效\hspace{0.333em}原\hspace{0.333em}理}\label{sec:12.04}
 
 牛顿力学中，真实力和惯性力是完全不同的。马赫的观点是
 几何性的惯性力，实质上也是一种真实的力。爱因斯坦对引力的
