--- a/tex/body/M13.00-Answers.tex
+++ b/tex/body/M13.00-Answers.tex
@@ -2,7 +2,7 @@
 \pagestyle{plain}
 \refstepcounter{chapter}
 \begin{center}
-    \zihao{-3}\textbf{全~部~习~题~答~案}
+    \zihao{-3}\textbf{全部习题答案}
 \end{center}
 \addcontentsline{toc}{chapter}{全部习题答案}
 \setlength{\mathindent}{4em}
@@ -17,7 +17,7 @@
     \setcounter{figure}{0}
     \addtocounter{chapter}{1}
     \begin{center}
-        \textsf{第~~\chinese{chapter}~~章}
+        \textsf{第\chinese{chapter}章}
     \end{center}
 }
 
