--- a/tex/body/M13.08-Answers-Chp08.tex
+++ b/tex/body/M13.08-Answers-Chp08.tex
@@ -70,7 +70,7 @@
 
 (2)向右，速率为$ 3.5 $米/秒
 
-\answer (1) $ v = v _ { 0 } + \sum _ { a = 1 } ^ n \dfrac { m u } { W + a m } $
+\answer (1) $\displaystyle v = v _ { 0 } + \sum _ { a = 1 } ^ n \dfrac { m u } { W + a m } $
 
 (2) $ v = v _ { 0 } + \dfrac { n m u } { W + n m }  $
 
@@ -83,9 +83,9 @@
 \answer 最终速率$  v = \sqrt { g \operatorname{/} k }  $
 % 393.jpg
 
-\answer $\frac{x^{2}}{\left(\frac{M}{M+m}\right)^{2} R^{2}}+\frac{y^{2}}{R^{2}}=1 $
+\answer $\dfrac{x^{2}}{\left(\dfrac{M}{M+m}\right)^{2} R^{2}}+\dfrac{y^{2}}{R^{2}}=1 $
 
-\answer (1) $ F = \frac { \dif m } { \dif t } v   $，功率$  P = \frac { \dif m } { \dif t } v ^ { 2 }  $
+\answer (1) $ F = \dfrac { \dif m } { \dif t } v   $，功率$  P = \dfrac { \dif m } { \dif t } v ^ { 2 }  $
 
 (2) $ \dfrac { 1 } { 2 } $转变成砂子的动能，其余由于滑动摩擦，变成热能消耗
 
