--- a/tex/body/M13.09-Answers-Chp09.tex
+++ b/tex/body/M13.09-Answers-Chp09.tex
@@ -21,7 +21,7 @@ $\vec{L} _ { o } = \vec{L} _ { c } $
 
 \answer (1) 绕粘结点(质心)转动
 
-(2) $ \omega = \frac { 3 v } { 2 l }  $
+(2) $ \omega = \dfrac { 3 v } { 2 l }  $
 % 395.jpg
 
 \answer $  4 . 7 3 \times 1 0 ^ 5 $ 公里
