--- a/tex/body/M13.12-Answers-Chp12.tex
+++ b/tex/body/M13.12-Answers-Chp12.tex
@@ -58,7 +58,7 @@ $ \vec{F} $为驾驶员作用于座位上的力，$\vec{F}$与向下的竖直方
 \stepcounter{answer}
 \answer 水平方向向东 $ \Delta s = 2 2 . 7  $米
 
-\answer (1) $\wideparen{A B} = \omega \frac { R ^ { 2 } } { v }$
+\answer (1) $\wideparen{A B} = \omega \dfrac { R ^ { 2 } } { v }$
 
 (2) $ \wideparen{A B} = 4 \omega \dfrac { R ^ { 2 } } { v } $
 
