--- a/tex/outline-of-mechanics.tex
+++ b/tex/outline-of-mechanics.tex
@@ -41,6 +41,7 @@
 \belowdisplayskip=\abovedisplayskip
 \abovedisplayshortskip=0em plus 0.25em minus 0.25em
 \belowdisplayshortskip=\abovedisplayshortskip
+\belowcaptionskip=-0.8em
 
 % 绪论
 \input{body/M00.00-Introduction}
