--- a/tex/body/M00.00-Introduction.tex
+++ b/tex/body/M00.00-Introduction.tex
@@ -1,5 +1,5 @@
 \ctexset{chapter={number={\quad},name={绪,论}}}
-\chapter{—— ~ 物理世界的统一}
+\chapter{—— ~ 物理世界的统一}\label{chp:0}
 \ctexset{chapter={number={\chinese{chapter}},name={第,章}}}
 
 物理学的兴起，是从经典力学开始的。在经典力学之前，人类
@@ -40,7 +40,7 @@
 言中写道；“我奉献这一作品。作为哲学的数学原理，因为哲学
 的全部责任似乎在于——从运动的现象去研究自然界中的力，然
 后从这些力去说明其他的现象。”\sbfootnote{牛顿这段话里的
-  “哲学”一词，实际含义相当于今天的“科学”或“物理学”。}这就是
+ “哲学”一词，实际含义相当于今天的“科学”或“物理学”。}这就是
 说，寻求统一的出发点不是思辨而应是运动现象。自然界中的运动
 现象是多种多样的，物理学的责任就在于寻找支配这些现象的统一的力。
 
@@ -74,14 +74,14 @@
 
 很快发现，牛顿的力学和麦克斯韦的电磁学这两大领域在时
 \begin{table}[!h]
-  \centering
-  \caption{物理学发展中的统一$^*$}\label{tab:00.01}
-  \begin{tabular}{c}
-    \toprule \vspace{-1em}                                  \\
-    \includegraphics[width=0.98\linewidth]{figure/tab00.01} \\
-    \bottomrule
-    \zihao{6}* 括号中的数字表示相应的理论建立的年代；有问号的表示尚未完成。
-  \end{tabular}
+ \centering
+ \caption{物理学发展中的统一$^*$}\label{tab:00.01}
+ \begin{tabular}{c}
+ \toprule \vspace{-1em}         \\
+ \includegraphics{figure/tab00.01} \\
+ \bottomrule
+ \zihao{6}* 括号中的数字表示相应的理论建立的年代；有问号的表示尚未完成。
+ \end{tabular}
 \end{table}
 \clearpage\noindent 空观上是很不协调的。在前者中，各种匀速运动是平权的，但却
 假定有绝对空间或绝对速度存在。相反，在后者中，有一个地位
