--- a/tex/body/M01.01-Time.tex
+++ b/tex/body/M01.01-Time.tex
@@ -1,4 +1,4 @@
-\section[时间]{时~~~~间}\label{sec:01.01}
+\section[时间]{时\hspace{3em}间}\label{sec:01.01}
 
 描写物体的运动，要用时间和空间这两个概念。因此，我们
 先来对时间、空间本身作一些分析。
@@ -36,9 +36,9 @@
 它不够稳定。如果比较一下两个单摆的周期，就会发现它们稳定
 多了。地球自转则是更稳定的钟。
 \begin{figure}[!h]
-  \centering
-  \includegraphics[height=8cm]{figure/fig01.01}
-  \caption{不同年代的时间测量精度}\label{fig:01.01}
+ \centering
+ \includegraphics[height=8cm]{figure/fig01.01}
+ \caption{不同年代的时间测量精度}\label{fig:01.01}
 \end{figure}
 
 \clearpage
@@ -48,13 +48,13 @@
 的精密计时都是用原子钟了。
 
 \begin{table}[!h]
-  \centering
-  \caption{一些典型物理现象的时间尺度}\label{tab:01.01}
-  \begin{tabular}{c}
-    \toprule
-    \includegraphics[width=0.8\linewidth]{figure/tab01.01} \\
-    \bottomrule
-  \end{tabular}
+ \centering
+ \caption{一些典型物理现象的时间尺度}\label{tab:01.01}
+ \begin{tabular}{c}
+ \toprule
+ \includegraphics[width=0.8\linewidth]{figure/tab01.01} \\
+ \bottomrule
+ \end{tabular}
 \end{table}
 \clearpage
 1967年10月在第十三届国际度量衡会议上通过了新的标准
@@ -62,7 +62,7 @@
 的基态的两个超精细能级在零磁场中跃迁辐射的周期$T$与$ 1 $秒的
 关系为
 \begin{equation*}
-  1 \,\text{秒} = 9,192,631,770\,T
+ 1 \,\text{秒} = 9,192,631,770\,T
 \end{equation*}
 
 表\ref{tab:01.01}~列举了一些典型现象的时间尺度。目前，物理学中涉及
