--- a/tex/body/M04.05-Several Important Gravitational Physical Quantities.tex
+++ b/tex/body/M04.05-Several Important Gravitational Physical Quantities.tex
@@ -98,7 +98,7 @@ $ v_1 $和$  v _ 2 $的物理意义与前面讨论的相似。当物体的速度
 光发射到超出$ r_g $的范围。我们生活的宇宙环境的密度平均约为$ \rho
   \approx 10 ^ {-29}$克/厘米，因此，由式\eqref{eqn:04.05.06}立即求得引力半径为
 \begin{equation*}
-  r _ g \approx 10 ^ {28}\;\text{厘米}
+  r _ g \approx 10 ^ {28}\text{ 厘米}
 \end{equation*}
 这就是说，我们不可能把光发射到$ 10 ^ {28} $厘米之外，我们称这个尺
 度为宇宙大小，或宇宙半径。
