--- a/tex/body/M05.00-Newtonian Cosmology.tex
+++ b/tex/body/M05.00-Newtonian Cosmology.tex
@@ -1,4 +1,4 @@
-\chapter[牛顿宇宙学]{牛~顿~宇~宙~学}\label{chp:05}
+\chapter[牛顿宇宙学]{牛顿宇宙学}\label{chp:05}
 
 \input{body/M05.01-The Copernican Principle}
 \input{body/M05.02-Cosmic Density Distribution}
