--- a/tex/body/M08.00-Conservation of Momentum.tex
+++ b/tex/body/M08.00-Conservation of Momentum.tex
@@ -1,4 +1,4 @@
-\chapter[动量守恒]{动~量~守~恒}\label{chp:08}
+\chapter[动量守恒]{动\hspace{0.333em}量\hspace{0.333em}守\hspace{0.333em}恒}\label{chp:08}
 
 \input{body/M08.01-Conservation of Momentum}
 \input{body/M08.02-Impulse}
