--- a/tex/body/M13.02-Answers-Chp02.tex
+++ b/tex/body/M13.02-Answers-Chp02.tex
@@ -18,7 +18,7 @@ $    y = - \dfrac { g x ^ { 2 } } { 2 v ^ { 2 } }$
 
 \answer $ | \vec{v} | = 2 1 . 6   $公里，与水平的车行方向夹角为 $ \theta = 7 3 ^ { \circ } 5 4 ^ { \prime }   $，如图所示
 \begin{figure}[h]
-    \vspace{-0.8em}
+    \vspace{-1.5em}
     \centering
     \includegraphics{figure/figa02.01}
     \caption{}
@@ -43,12 +43,13 @@ $    y = - \dfrac { g x ^ { 2 } } { 2 v ^ { 2 } }$
 (2) $ | \vec{v} | = \sqrt { {v'} ^ { 2 } - u ^ { 2 } } = 1 9 5 . 9 6 \approx 196 $公里/时
 \begin{equation*}
     \theta = \sin ^ { - 1 } \dfrac { u } { v } = 1 1 ^ { \circ } 3 0 '
-\end{equation*}\vspace{-1.3em}
+\end{equation*}\vspace{-1.5em}
 \begin{figure}[h]
     \centering
     \subfigure[]{\includegraphics{figure/figa02.02a}}
     \qquad
     \subfigure[]{\includegraphics{figure/figa02.02b}}
+    \vspace{-1em}
     \caption{}
     \label{figa:02.02}
 \end{figure}\vspace{-1em}
@@ -59,7 +60,7 @@ $    y = - \dfrac { g x ^ { 2 } } { 2 v ^ { 2 } }$
 
 (1) $ t _ { 1 } = \dfrac { t _ { 0 } } { 1 - v ^ { 2 } \operatorname{/} u ^ { 3 } }   $
 
-(2) $ t _ { 2 } = \dfrac { t _ { 0 } } { \sqrt { 1 - v ^ { 2 } \operatorname{/} u ^ { 2 } } }  $\vspace{-1em}
+(2) $ t _ { 2 } = \dfrac { t _ { 0 } } { \sqrt { 1 - v ^ { 2 } \operatorname{/} u ^ { 2 } } }  $
 
 (3) $t_{3}=\dfrac{t_{0}}{\sqrt{1-\dfrac{v^{2}}{u^{2}} \sin ^{2} \theta \Big[1-\dfrac{v^{2}}{u^{2}}\cdot \dfrac{\cos^2\theta}{ 1-\left(v^{2} \operatorname{/} u^{2}\right) \sin ^{2} \theta}\Big]}}$
 
