--- a/tex/body/Z01-Afterword.tex
+++ b/tex/body/Z01-Afterword.tex
@@ -1,8 +1,9 @@
-\clearpage{\pagestyle{empty}\cleardoublepage}
+\clearpage
+\pagestyle{empty}
 \setcounter{page}{1}
 \label{afterword}\pdfbookmark{重排后记}{afterword}
 \begin{center}
-  \zihao{3}\xbsong 重~排~后~记
+  \zihao{3}\xbsong 重\hspace{0.333em}排\hspace{0.333em}后\hspace{0.333em}记
 \end{center}
 \vspace{1em}
 
@@ -20,8 +21,8 @@
 分辨。本重排版采用\LaTeX 根据该扫描本重新编排并绘制了
 全部插图（个别图片替换为网上寻得的高清晰图片），对明显的错漏做了更正。
 
-由于原书铅字排版印刷，与\LaTeX 排版相比，再各排版间距上有很
-大差异。在重排过程中，无法实现完全相同的效果，只能在可能的情况下，尽量按照原书页码安排内容。
+由于原书铅字人工排版印刷，与\LaTeX 排版相比，存在较大差异。在重排过
+程中，无法实现完全相同的效果，只能在可能的情况下，尽量按照原书页码安排内容。
 
 重排版全部源代码文件在网上公开，项目地址如下：
 \begin{center}
@@ -37,7 +38,7 @@
 \heiti \zihao{4}
 \begin{center}
     ~\\
-    特别提示
+    特\hspace{0.333em}别\hspace{0.333em}提\hspace{0.333em}示
 \end{center}
 \normalsize
 \vspace{1em}
