--- a/tex/body/F02-Publish Information.tex
+++ b/tex/body/F02-Publish Information.tex
@@ -8,9 +8,9 @@
 
   封面设计：陈治黄
 
-  \vfill \heiti\makebox[7em][s]{力学概论}
+  \vfill \heiti{力~~学~~概~~论}
 
-  \normalsize \kaishu{方励之 \quad 李淑娴}
+  \normalsize \kaishu{方励之~~李淑娴}
 
   \normalfont{} *
 
@@ -20,17 +20,17 @@
 
   \normalsize 安徽省%
   \hspace{0.2em}\raisebox{-0.5mm}{\includegraphics[width=4em]{icon/xinhuabokestore}}\hspace{0.2em}%
-  发行 \quad 安徽新华印刷厂印刷
+  发行~~安徽新华印刷厂印刷
 
   *
 
-  \zihao{6}开本：850$\times$1168 \quad 1/32 \quad 印张：12.5 \quad 字数：309,000
+  \zihao{6}开本：850$\times$1168~~1/32~~印张：12.5~~字数：309,000
 
-  1986年1月第一版 \qquad 1986年1月第一次印刷
+  1986年1月第一版~~~~1986年1月第一次印刷
 
   印数00,001—5,000
 
-  \normalsize 统一书号：13200$\cdot$68 \qquad 定价：2.5元
+  \normalsize 统一书号：13200$\cdot$68~~~~定价：2.5元
 \end{center}
 \thispagestyle{empty}
 \clearpage
