--- a/tex/body/M00.00-Introduction.tex
+++ b/tex/body/M00.00-Introduction.tex
@@ -59,7 +59,7 @@
 原予、原子核、核子以及夸克等。
 
 \clearpage
-表\ref{tab:00.01}的其余部分就表示物理学在寻求统一，寻求完整的因果
+表\ref{tab:00.01}~的其余部分就表示物理学在寻求统一，寻求完整的因果
 链条上一些重要的阶段。
 牛顿的力学和万有引力定律，是物理学上第一次大的统一。
 在牛顿之前，传统的观念认为支配天体运行和支配地面物体运动
