--- a/tex/body/M01.01-Time.tex
+++ b/tex/body/M01.01-Time.tex
@@ -65,7 +65,7 @@
   1 \,\text{秒} = 9,192,631,770\,T
 \end{equation*}
 
-表\ref{tab:01.01}列举了一些典型现象的时间尺度。目前，物理学中涉及
+表\ref{tab:01.01}~列举了一些典型现象的时间尺度。目前，物理学中涉及
 的最长的时间是：\num{e38}秒，它是质子寿命的下限。宇宙的年龄大约
 是 \num{6e17}秒，即$ 200 $亿年。牛顿力学所涉及的时问尺度大约是
 \num{e-3}$\sim$\num{e15}秒，即从声振动的周期到太阳绕银河中心转动的周期。
