--- a/tex/body/M01.02-Zeno Paradox And Measurement Of Time.tex
+++ b/tex/body/M01.02-Zeno Paradox And Measurement Of Time.tex
@@ -52,22 +52,22 @@ $t'$，阿基里斯总是落在龟的后面。这就是芝诺的结论。
   \label{eqn:01.02.03}
 \end{equation}%
 式\eqref{eqn:01.02.02}或式\eqref{eqn:01.02.03}称为芝诺变换。它给出的$t'$与t的关系。在
-图\ref{fig:01.03}中画出。
+图\ref{fig:01.03}~中画出。
 
-\begin{table}[h]
+\begin{table}[!h]
   %\renewcommand\arraystretch{1.6}
   \centering
   \caption{普通时与芝诺时的关系}\label{tab:01.02}
   \zihao{-5}
-  \begin{tblr}{colsep=2em,row{2-Z}={rowsep=0.3em},colspec={c|X}}
+  \begin{tblr}{colsep=2em,row{2-Z}={rowsep=0em},colspec={c|X}}
     \toprule
     芝诺时（$t'$） & \SetCell{c}普通时（$t$）                                                                                                        \\
     \midrule
-    0         & 0                                                                                                                          \\
-    1         & $\dfrac{L}{v_1}$                                                                                                           \\
-    2         & $\dfrac{L}{v_1} +\dfrac{L}{v_1}\cdot\dfrac{v_2}{v_1}$                                                                      \\
+    0         & 0                                                                                                                          \\[1.75ex]
+    1         & $\dfrac{L}{v_1}$                                                                                                           \\[1.75ex]
+    2         & $\dfrac{L}{v_1} +\dfrac{L}{v_1}\cdot\dfrac{v_2}{v_1}$                                                                      \\[1.75ex]
     \vdots    & \vdots                                                                                                                     \\
-    $n$       & $\dfrac{L}{v_1} + \dfrac{L}{v_1}\cdot\dfrac{v_2}{v_1} + \cdots +\dfrac{L}{v_1}\cdot{\left(\dfrac{v_2}{v_1}\right)}^{n-1} $ \\
+    $n$       & $\dfrac{L}{v_1} + \dfrac{L}{v_1}\cdot\dfrac{v_2}{v_1} + \cdots +\dfrac{L}{v_1}\cdot{\left(\dfrac{v_2}{v_1}\right)}^{n-1} $ \\[1.75ex]
               & $= \displaystyle \sum_{i=0}^{n-1} \frac{L}{v_1}{\left(\frac{v_2}{v_1}\right)}^i$                                           \\
     \bottomrule
   \end{tblr}
