--- a/tex/body/M01.06-Instantaneity Of Velocity.tex
+++ b/tex/body/M01.06-Instantaneity Of Velocity.tex
@@ -24,11 +24,11 @@ $ t_2 $时间间隔内的平均速度:
   \langle v\rangle_{3 \rightarrow 5}=\frac{85-51}{5-3}=17\,\text{米/秒}
 \end{equation*}
 选两个时间间隔中平均速度是一样的。事实上，如果利用分析表
-达式\eqref{eqn:01.05.01}来计算，就会发现对任何时间间隔，运动的平均速度
+达式\eqref{eqn:01.05.01}~来计算，就会发现对任何时间间隔，运动的平均速度
 都是17米/秒。这种对于任何时间间隔平均速度总不变的运动，称
 为匀速直线运动。
 
-由表\ref{tab:01.05}或$x=4.9t^2$所示的自由落体运动，情况就不同了：
+由表\ref{tab:01.05}~或$x=4.9t^2$所示的自由落体运动，情况就不同了：
 在第1秒末到第3秒束的问隔中，
 \begin{equation*}
   \langle v\rangle_{1 \rightarrow 3}=\frac{44.1-4.9}{3-1}=19.6\,\text{米/秒}
@@ -53,7 +53,7 @@ $ t_2 $时间间隔内的平均速度:
 秒钟的时间间隔内，自由落体仍然不是匀速的。这种情况迫使我
 们把计算平均速度的时间间隔取得尽可能地小。
 
-为了便于进一步讨论，我们将式\ref{eqn:01.06.01}中的
+为了便于进一步讨论，我们将式\ref{eqn:01.06.01}~中的
 $t_2$表示成$t_2=t_1+\Delta t$，这个$\Delta t$就是求平均速
 度所选用的时间间隔。现在来求从第1秒末到第$1+\Delta t$秒末
 的间隔中，自由落体的平均速度。利用$x=4.9t^2$得到
