--- a/tex/body/M01.07-Velocity Of Curvilinear Motion.tex
+++ b/tex/body/M01.07-Velocity Of Curvilinear Motion.tex
@@ -7,8 +7,8 @@
   \langle \vec{v} \rangle_{t_1\rightarrow t_2}=\frac{\vec{r}\left(t_2\right)-\vec{r}\left(t_1\right)}{t_2-t_1}=\frac{\Delta \vec{r}}{\Delta t}
 \end{equation}
 
-\clearpage\noindent 将其与式\eqref{eqn:01.06.01}对比可见。只是将其中的$x\left(t\right)$换成了相应的
-$\vec{r}\left(t\right)$。在\eqref{eqn:01.07.01}中，$\Delta t=t_2-t_1$，$\Delta \vec{r}=\vec{r}\left(t_2\right)-\vec{r}\left(t_1\right)$，
+\clearpage\noindent 将其与式\eqref{eqn:01.06.01}~对比可见。只是将其中的$x\left(t\right)$换成了相应的
+$\vec{r}\left(t\right)$。在\eqref{eqn:01.07.01}~中，$\Delta t=t_2-t_1$，$\Delta \vec{r}=\vec{r}\left(t_2\right)-\vec{r}\left(t_1\right)$，
 后者是$t_1$到$t_2$间隔
 \begin{wrapfigure}[8]{r}{12em}
   \centering
@@ -18,15 +18,15 @@ $\vec{r}\left(t\right)$。在\eqref{eqn:01.07.01}中，$\Delta t=t_2-t_1$，$\De
   \label{fig:01.11}
 \end{wrapfigure}
 中质点位置矢量的改变量，称为位移矢量。这个平均速度的定义表明，平均速度是矢量。根据矢量运算
-规则，式\eqref{eqn:01.07.01}所定义的$\langle \vec{v}\rangle t_1-t_2$是在l到2的方向(图\ref{fig:01.11})。
-另一方面，由图\ref{fig:01.11}很清楚知道，在$t_1$到$t_2$时间内质点$A$的运
+规则，式\eqref{eqn:01.07.01}~所定义的$\langle \vec{v}\rangle t_1-t_2$是在l到2的方向(图\ref{fig:01.11})。
+另一方面，由图\ref{fig:01.11}~很清楚知道，在$t_1$到$t_2$时间内质点$A$的运
 动方向并非总是沿着l到2的方向的，而是先从1向3方向运动，
 然后从3向2方向运动，这些运动方向并不平行于1到2的方向。
 所以平均速度所指的方向，只是质点$A$真实运动方向的平均。
 也就是说，平均速度不但对于运动快慢的描写是粗
 略的，而且对于运动方向的描写也是粗略的。
 
-对式\eqref{eqn:01.07.01}取$\Delta t \rightarrow 0$的极限，就得到瞬
+对式\eqref{eqn:01.07.01}~取$\Delta t \rightarrow 0$的极限，就得到瞬
 时速度的定义。
 \begin{equation}\label{eqn:01.07.02}
   \begin{aligned}
