--- a/tex/body/M01.09-Circular Motion And Angular Velocity.tex
+++ b/tex/body/M01.09-Circular Motion And Angular Velocity.tex
@@ -20,7 +20,7 @@ $\vec{r}$与某一选定的方向(例如$X$轴)之间的夹角$\varphi$(图\ref{
 们按描写运动所需坐标的个数，把运动分为一维运动、二维运动、
 三维运动等等。直线运动和圆周运动都是一维运动。
 
-按照\ref{sec:01.07}节的讨论，速度的
+按照\ref{sec:01.07}~节的讨论，速度的
 方向为轨迹上相应点的切线方向，圆的切线总与半径相垂直，所
 以圆周运动的速度$\vec{v}$总与位置矢量$\vec{r}$相垂直。现在来求速度的
 
