--- a/tex/body/M01.10-Uniform Circular Motion.tex
+++ b/tex/body/M01.10-Uniform Circular Motion.tex
@@ -17,7 +17,7 @@ T为周期，比较式\eqref{eqn:01.10.01}、\eqref{eqn:01.09.03}，得到：
 而它的加速度并不为零。由于速度方向总是垂直于矢量$\vec{r}$的，所
 以在$t$到$t+\Delta t$间隔中，倘使$\vec{r}$转过角度$\Delta\varphi$，
 则$\vec{v}$也就转过了$\Delta\varphi$。由于
-$|\vec{v}\left(t\right)|=|\vec{v}\left(t+\Delta t\right)|=v$，由图\ref{fig:01.22}的等腰三角形，得
+$|\vec{v}\left(t\right)|=|\vec{v}\left(t+\Delta t\right)|=v$，由图\ref{fig:01.22}~的等腰三角形，得
 \begin{equation*}
   \begin{aligned}
     |\vec{v}\left(t+\Delta t\right)-\vec{v}\left(t\right)| & =2 v \sin \frac{\Delta \varphi}{2}                   \\
