--- a/tex/body/M01.11-Inverse Problem In Kinematics.tex
+++ b/tex/body/M01.11-Inverse Problem In Kinematics.tex
@@ -43,7 +43,7 @@ t的质点的坐标$x\left(t\right)$。
 这就是我们所要求的答案。
 
 现在说明式\eqref{eqn:01.11.01}或\eqref{eqn:01.11.02}中求和运算的几何意义。我
-们在图\ref{fig:01.24}中画出了速度$v$对时间$t$的关系曲线。各时间间隔$\Delta t_1 , \Delta t_2 , \cdots$，相应于横坐标上的各小段，各$v\left(t_1\right) , v\left(t_2\right) , \cdots$，相应
+们在图\ref{fig:01.24}~中画出了速度$v$对时间$t$的关系曲线。各时间间隔$\Delta t_1 , \Delta t_2 , \cdots$，相应于横坐标上的各小段，各$v\left(t_1\right) , v\left(t_2\right) , \cdots$，相应
 于各小段中$ v $的近似值。因而$\Delta x_1 , \Delta x_2 , \cdots$，在数值上就等于相
 应的小长方形的面积。故对所有$\Delta x_i$求和，在各小段$\Delta x_i$都趋于
 无限小的情况下，在数值上就等于零到$t$间横轴之上与曲线$v$之
@@ -70,7 +70,7 @@ t的质点的坐标$x\left(t\right)$。
 \setcounter{example}{0}
 \example 匀速运动。
 
-如果质点的速度是常数$v_0$，它的$v-t$图就如图\ref{fig:01.25}所示。由0
+如果质点的速度是常数$v_0$，它的$v-t$图就如图\ref{fig:01.25}~所示。由0
 到$t$的横轴与曲线$v$围成一个长方形，它的面积是$v_0t$，将之代入
 式\eqref{eqn:01.11.03}，即得轨迹函数为:
 \begin{equation}\label{eqn:01.11.04}
@@ -94,7 +94,7 @@ t的质点的坐标$x\left(t\right)$。
 
 \example 匀加速运动。
 
-设质点的速度与时间成正比，$v=at$，在图\ref{fig:01.26}中画出这个
+设质点的速度与时间成正比，$v=at$，在图\ref{fig:01.26}~中画出这个
 关系。零到$t$的横轴与曲线$v$围成一个直角三角形，它的面积是
 $\dfrac{1}{2} a t^2$，代入式\eqref{eqn:01.11.03}，就得到轨迹函数为：
 \begin{equation*}\label{eqn:01.11.04i}
