--- a/tex/body/M01.13-Exercises.tex
+++ b/tex/body/M01.13-Exercises.tex
@@ -62,7 +62,7 @@
 的角速度为常量，其大小为$\omega=\dot\theta=2$弧度/秒。当质点距原点为3
 米时，它的速度的大小及加速度大小是多少？
 
-\exercise 如图\ref{fig:01.29}所示，向上抛一物体，测量物体上抛及下落经
+\exercise 如图\ref{fig:01.29}~所示，向上抛一物体，测量物体上抛及下落经
 \begin{wrapfigure}[10]{r}{13em}
   \begin{center}
     \includegraphics{figure/fig01.29}
@@ -224,7 +224,7 @@ $\alpha$是多少？2.5秒末夹角$\alpha$又为多少？
 (2)$A$点的轨迹。
 
 \exercise 一半径为$r$的小球沿两固定的等高平行导轨作纯滚动，
-两导轨间的距离为$d$，如图\ref{fig:01.32}所示。试问：
+两导轨间的距离为$d$，如图\ref{fig:01.32}~所示。试问：
 
 (1)球心的速度与球的角速度的关系是怎样的？
 
