--- a/tex/body/M02.03-Relativity Of Velocity.tex
+++ b/tex/body/M02.03-Relativity Of Velocity.tex
@@ -58,7 +58,7 @@
 \end{wrapfigure}
 现在把式\eqref{eqn:02.03.02}推广到三维情况。
 
-由图\ref{fig:02.07}知，在$K$及$K'$中，质点$P$的位置分别用$\vec{r}$，
+由图\ref{fig:02.07}~知，在$K$及$K'$中，质点$P$的位置分别用$\vec{r}$，
 $\vec{r'}$表示。它们之间的关系是
 {\setlength{\mathindent}{4em}
 \begin{equation*}
@@ -83,7 +83,7 @@ $\vec{r'}$表示。它们之间的关系是
 \begin{equation}\label{eqn:02.03.04}
   \vec{v}\left(t\right)\equiv\frac{\dif \vec{r}}{\dif t}
 \end{equation}
-另一方面，由式\eqref{eqn:02.03.03}可以求出质点在$K'$系中的轨迹函数，它是
+另一方面，由式\eqref{eqn:02.03.03}~可以求出质点在$K'$系中的轨迹函数，它是
 \begin{equation*}
   \vec{r}'=\vec{r}'\left(t\right)=\vec{r}\left(t\right)-\vec{u}t-\vec{d}_0
 \end{equation*}\label{err:02.03.02}
@@ -186,7 +186,7 @@ $\vec{r'}$表示。它们之间的关系是
 种差别叫做光行差。因地球公转运动而产生的光行差称为周年光
 行差，因地球自转而产生的光行差称为周日光行差。
 
-在图\ref{fig:02.09}中，若观测者相对于某星是静止的，他观测到某星
+在图\ref{fig:02.09}~中，若观测者相对于某星是静止的，他观测到某星
 在天球上的位置是$\sigma$，则星光到达望远镜物镜中心$O$时，其目镜位
 置在$E'$点。若观测者跟随着地球运动，$EE'$为此时地球的运动方
 向，因星光由$O$点到达目镜的时间为$\tau$，故在此时间内，地球运
