--- a/tex/body/M02.06-Failure Of Velocity Composition Law.tex
+++ b/tex/body/M02.06-Failure Of Velocity Composition Law.tex
@@ -1,6 +1,6 @@
 \section{速度合成律的失效}\label{sec:02.06}
 
-如图\ref{fig:02.10}所示，如果在炮车上装有两门相同的大炮，一门向
+如图\ref{fig:02.10}~所示，如果在炮车上装有两门相同的大炮，一门向
 右，一门向左。如果炮车相对地面静止\lbr 图\ref{fig:02.10a}\rbr，这时，不论
 从地面参考系$K$，还是从炮车参考系$K'$看，同时向左、右发射出
 的炮弹的速率都是$v$。如果炮车相对地面以$u$的速率向右匀速运动
@@ -34,7 +34,7 @@
   \label{fig:02.11}
 \end{figure}
 
-再考虑一个如图\ref{fig:02.11}所示的实验，这里仅把大炮改为灯泡，
+再考虑一个如图\ref{fig:02.11}~所示的实验，这里仅把大炮改为灯泡，
 灯泡发出的光与炮弹相当，光相对于灯泡的速率是$c$。根据速度合
 成律，当灯泡相对于地面以速率$u$向右匀速运动时，则向右发出的
 光对于地面参考系$K$的速率应是$c+u$，而向左发出的光对于$K$的
@@ -43,7 +43,7 @@
 
 上述实验是把速度合成律应用到光传播的现象中去。根据光
 学知识，我们知道，一个物体$A$之所以能被看到，是由于从物体
-$A$发出的光（或从它反射的光）传到了我们的眼睛。例如，在图\ref{fig:02.12}
+$A$发出的光（或从它反射的光）传到了我们的眼睛。例如，在图\ref{fig:02.12}~
 中，1投球，2接球。2看到球$A$，是由于球$A$发出的光到达2。如果
 光速为$c$，1到2之间距离为$L$，并且1即将投球的时刻为$t=0$，则
 2看到1即将投球的时刻为
@@ -106,7 +106,7 @@ $u=1500$公里/秒。
   \label{fig:02.13}
 \end{figure}
 
-由图\ref{fig:02.13}看出，如果爆发时刻为$t=0$，且爆发时间极短，则
+由图\ref{fig:02.13}~看出，如果爆发时刻为$t=0$，且爆发时间极短，则
 根据速度合成律，1处发出的传向观察者的光相对地面的速率是
 $c+u$，所以观察者看到l发光的时刻是
 
@@ -137,7 +137,7 @@ $c+u$，所以观察者看到l发光的时刻是
 
 上述真实例子说明，对于光传播的现象，速度合成律是失效
 的。它说明，从超新星不同地方发出的光，即不同光源发出的光，
-相对于地面的速率之间的差别，不应有式\eqref{eqn:02.03.06}所给出的那样
+相对于地面的速率之间的差别，不应有式\eqref{eqn:02.03.06}~所给出的那样
 大。现代更精确的实验表明。光速是与光源速度无关的，无论光
 源的速度有多么大，由它发出的光的速度仍与静止光源发出的光
 的速度相同。这就是光速不变性，这个特点最初是由爱因斯坦注
