--- a/tex/body/M02.08-The Conclusions Of Invariance Of Light Velocity 2 - Length Contraction.tex
+++ b/tex/body/M02.08-The Conclusions Of Invariance Of Light Velocity 2 - Length Contraction.tex
@@ -12,7 +12,7 @@
 们之间的相对速度是$u$。对于地面上的观测者来说$\mu$子的寿命$\Delta t = \dfrac{\num{2.2e-6}}{\sqrt{1 - \dfrac{u ^ 2}{c ^ 2}}}$
 秒，$\Delta t$大了，故$ L \left( = u \Delta t \right)$大于$\mu$子出生处到地面的
 高度，所以它能到达地面。而随$\mu$子运动的观察者所看到$\mu$子的寿
-命应是~\num{2.2e-6}秒。那么他怎么解释$\mu$子到达地面这一事实呢？
+命应是~\num{2.2e-6}~秒。那么他怎么解释$\mu$子到达地面这一事实呢？
 % 082.jpg
 这只能有一种可能性，即随同$\mu$子运动的观测者主张：$\mu$子出生
 处到地面的距离变短了。即一旦时间间隔不变性不成立，则长度
