--- a/tex/body/M03.06-Consider Questions.tex
+++ b/tex/body/M03.06-Consider Questions.tex
@@ -60,7 +60,7 @@
 
   (d)固定的斜面上下滑。
 
-  \question 如图\ref{fig:03.19}所示，$ A $，$ B $，$ C $三块砖叠
+  \question 如图\ref{fig:03.19}~所示，$ A $，$ B $，$ C $三块砖叠
   在一起，放在水平地面上不动，质量分别
   为$ m_A $， $ m _ B $，$ m_C $，分析
   这三块砖所受到的力。
@@ -75,7 +75,7 @@
   \question 两个力的合力是否一定比其中任一个大？
 
   \question 同一重物用两根等长的绳悬挂起来，
-  采取不同的角度，分别如图\ref{fig:03.20}所示，哪一
+  采取不同的角度，分别如图\ref{fig:03.20}~所示，哪一
   种情况绳所受的拉力最大？哪种最小？
 
   % 112.jpg
@@ -137,7 +137,7 @@
   其中$ F $是阻力；$ v $是速度；$ n $为某个数。在低速时$ n = 1 $， $ \beta $ 是一个
   常数。试求$ \beta $的量纲。
 
-  \question 如图\ref{fig:03.21}所示，用一弦线将质量为$ m $的物体挂在天花板
+  \question 如图\ref{fig:03.21}~所示，用一弦线将质量为$ m $的物体挂在天花板
   上，再用同样质地的弦线$ D $系在$ m $下面。试说明以下事实
 
   (1) 如果突然向下扯$ D $，$ D $就断；
