--- a/tex/body/M03.07-Exercises.tex
+++ b/tex/body/M03.07-Exercises.tex
@@ -116,7 +116,7 @@
 \end{figure}
 
 \exercise 质量分别为$ m_1 $，$ m _ { 2 } $ 和$ m_3 $的三个物体($ m _ { 2 } > m _ { 1 } $)，用绳子按
-图\ref{fig:03.28}所示连接。$ A $和$ B $是两个轻滑轮。设斜面和滑轮位置不变，绳
+图\ref{fig:03.28}~所示连接。$ A $和$ B $是两个轻滑轮。设斜面和滑轮位置不变，绳
 长不变，略去摩擦力和绳子的质量。求系统的加速度$ a $和绳中的
 % 116.jpg
 张力$ T _ { 1 } $，$ T _ { 2 } $；$ A $点承受的力；绳$ d $上的张力。
@@ -241,7 +241,7 @@ $ M $的均匀链条，套在一表面光滑、顶角为$ \alpha $
 
 (2)若小球通过最高点时的速度为$ 2 v _ { 0 } $，绳中的张力$ T $是多少？
 
-\exercise 如图\ref{fig:03.34}所示，一细绳穿过光滑的、不动的细管，两端分
+\exercise 如图\ref{fig:03.34}~所示，一细绳穿过光滑的、不动的细管，两端分
 别拴着质量为$ m $和$ M $的小球。当小球$ m $绕管子的几何轴转动时，$ m $
 到管口的绳长为$ l $，与竖直的细管夹角为$ \theta $。细管半径可以忽略，
 求小球的速度和它所受的向心力；并证明：$ \cos \theta = \dfrac { m } { M } $； 以及小球
