--- a/tex/body/M04.01-Kepler's Three Laws Of Planetary Motion.tex
+++ b/tex/body/M04.01-Kepler's Three Laws Of Planetary Motion.tex
@@ -32,14 +32,14 @@
 式中，$ T $是行星运动的周期；$ r $是椭圆轨道的半长轴。这称为周期
 定律。
 
-表\ref{tab:04.01}中给出了九个大行星的有关数据。其中是以AU为
+表\ref{tab:04.01}~中给出了九个大行星的有关数据。其中是以AU为
 单位的，AU是地球轨道的半长轴，称为天文单位，其值是
 \begin{equation*}
   1 \symrm{AU} = \num{149.6e8} \text{ 公里}
 \end{equation*}
 
-图\ref{fig:04.01}画出了$ \ln T $与$ \ln r $之间的关系。它是一条直线，斜率为
-3/2，就是式\eqref{eqn:04.01.01}的图示。
+图\ref{fig:04.01}~画出了$ \ln T $与$ \ln r $之间的关系。它是一条直线，斜率为
+3/2，就是式\eqref{eqn:04.01.01}~的图示。
 \begin{figure}[h]
   \centering
   \includegraphics{figure/fig04.01}
