--- a/tex/body/M11.02-Principle of Relativity.tex
+++ b/tex/body/M11.02-Principle of Relativity.tex
@@ -112,7 +112,7 @@ $ K $与相对于$ K' $是一样的，即
   m ^ { \prime } = m
 \end{equation}
 
-这样，将式\eqref{eqn:11.02.03}\eqref{eqn:11.02.05}代入式\eqref{eqn:11.02.01}，就得到
+这样，将式\eqref{eqn:11.02.03}~\eqref{eqn:11.02.05}代入式\eqref{eqn:11.02.01}，就得到
 \begin{equation}\label{eqn:11.02.06}
   \vec{F} ^ { \prime } = m ^ { \prime } \vec{a} ^ { \prime }
 \end{equation}
