--- a/tex/body/M13.09-Answers-Chp09.tex
+++ b/tex/body/M13.09-Answers-Chp09.tex
@@ -33,7 +33,7 @@ $ \varphi = 0 $
 
 (2) {\ziju{-0.05pt}飞船点火时，即火箭爆发，相应$ \varphi = 0 $，所以速度方向为$ \uppi \operatorname{/} 2 $}
 
-$ r \to \infty $为逃逸，相应于$ \cos \varphi _ \infty = - \dfrac { 1 } { \beta ^ { 2 } - 1 }, ~ \alpha = \varphi _ \infty - \dfrac { \uppi } { 2 } $\\
+$ r \to \infty $为逃逸，相应于$ \cos \varphi _ \infty = - \dfrac { 1 } { \beta ^ { 2 } - 1 }, ~ \alpha = \varphi _ \infty - \dfrac { \uppi } { 2 } $\\[-0.5em]
 所以$ \sin \alpha = - \cos \varphi _ \infty = \dfrac { 1 } { \beta ^ { 2 } - 1 } $ \\
 当$ \beta = \sqrt { 3 } $ 时，$ \alpha = 3 0 ^ \circ $
 
