--- a/tex/body/Z01-Afterword.tex
+++ b/tex/body/Z01-Afterword.tex
@@ -34,24 +34,17 @@
 本人参与修订。
 
 \clearpage
-\centering
-~\vspace{2\baselineskip}
-\begin{minipage}[c]{0.7\linewidth}
-  \indent
-  \label{tips}\pdfbookmark{特别提示}{tips}
-  \heiti \zihao{-3}
-  \begin{center}
-      \makebox[5em][s]{特别提示}
-  \end{center}
-  \normalsize
-  \vspace{1em}
+\label{tips}\pdfbookmark{特别提示}{tips}
+\heiti \zihao{4}
+\begin{center}
+  ~\\
+  特\hspace{0.333em}别\hspace{0.333em}提\hspace{0.333em}示
+\end{center}
+\normalsize
+\vspace{1em}
 
-  ~
+该书的版权、著作权由原作者、出版机构及该书权利人所有。如需商用，请与原作者、出版机构及该书权利人联系。
 
-  \hspace{2em}该书的版权、著作权由原作者、出版机构及该书权利人所有。如需商用，请与原作者、出版机构及该书权利人联系。
+~
 
-  ~
-
-  \hspace{2em}本重排版仅作个人学习之用。若有侵犯原书相关权利人权利，请联系本人删除网络发布。
-\end{minipage}
-
+本重排版仅作个人学习之用。若有侵犯原书相关权利人权利，请联系本人删除网络发布。
