--- a/tex/body/M04.03-Gravitational Constant G.tex
+++ b/tex/body/M04.03-Gravitational Constant G.tex
@@ -40,7 +40,7 @@
 
 确定万有引力常数$ G $的数值，就要测量两个已知质量的物体
 间的引力。1798年，卡文迪许作了第一个精确的测量。他用的扭
-秤如图\ref{fig:04.04}所示。其中两个质量均为$ m $的小球固定在一轻杆的两
+秤如图\ref{fig:04.04}~所示。其中两个质量均为$ m $的小球固定在一轻杆的两
 端，再用一根细丝将这个杆水平悬挂起来，每个质量$ m $附近各放置
 一个质量为$ M $的大球。根据万有引力定律，当大球在位置$ A , B $
 时，由于小球受到吸引力，而对悬杆产生一力矩，使其产生转动。\\~\\
@@ -67,13 +67,13 @@
 \textsf{2.扭秤周期法}
 
 这种方法的原理是扭秤的摆动周期在引力的作用下会发生变
-化。如图\ref{fig:04.04}所示，若将一个大质量$ M $放在横杆方向，则其摆动周
+化。如图\ref{fig:04.04}~所示，若将一个大质量$ M $放在横杆方向，则其摆动周
 期将缩短；若$ M $放在垂直于横杆的方向，周期将增加，由周期差
 别可以确定$ G $。
 
 \textsf{3.扭秤共振法}
 
-在图\ref{fig:04.04}中，把两个$ M $也作为一扭秤的两端悬挂起来，这样
+在图\ref{fig:04.04}~中，把两个$ M $也作为一扭秤的两端悬挂起来，这样
 形成两扭摆系统，一个扭摆的质量小($ m $)，一个质量大($ M $) 。当
 $ M $摆动时，由于引力的作用也将引起$ m $摆动。当调节两个摆的周
 % 133.jpg
