--- a/tex/body/M09.01-Conservation of Angular Momentum.tex
+++ b/tex/body/M09.01-Conservation of Angular Momentum.tex
@@ -31,7 +31,7 @@
   m _ 1 r _ { 1 } \times \frac { \dif \vec{v}_ { 1 } } { \dif t } = m _ { 1 } \frac { \dif } { \dif t } ( \vec{r} _ { 1 } \times \vec{v} _ { 1 }) - m _ { 1 } \frac { \dif \vec{r} _ { 1 } } { \dif t} \times \vec{v} _ { 1 }
 \end{equation*}
 % 255.jpg
-\clearpage\mbox{}\vspace{-2em}
+\clearpage\mbox{}~\vspace{-2em}
 \begin{equation*}
   \begin{aligned}
     \hspace{5em} & = m _ { 1 } \frac { \dif } { \dif t } ( \vec{r} _ { 1 } \times \vec{v} _ { 1 } ) - m _ { 1 } \vec{v} _ { 1 } \times \vec{v} _ { 1 } \\
