--- a/tex/outline-of-mechanics.tex
+++ b/tex/outline-of-mechanics.tex
@@ -41,6 +41,8 @@
 \abovedisplayshortskip=0em plus 0.25em minus 0.25em
 \belowdisplayshortskip=\abovedisplayshortskip
 \belowcaptionskip=-0.8em
+%\def\int{\mathop{\vcenter{\hbox{\scaleto[1.3ex]{\symbol{"222B}}{2em}}}}\nolimits}
+%\def\sum{\mathop{\vcenter{\hbox{\scaleto{\symbol{"2211}}{1.2em}}}}}
 
 % 绪论
 \input{body/M00.00-Introduction}
