修改少量错字

--- a/tex/body/M05.01-The Copernican Principle.tex
+++ b/tex/body/M05.01-The Copernican Principle.tex
@@ -16,7 +16,7 @@
 不能完全忽略。太阳-行星体系比地球-月亮体系大得多，所以这
 个理由是不充分的。
 
-理由之二是恒里距离太远，所以它对行星的引力很小，可以
+理由之二是恒星距离太远，所以它对行星的引力很小，可以
 忽略。的确，最近的恒星距我们约为4.3光年(一光年等于光在一
 年中运行的距离，约等于$ 9.4605 \times 10 ^ { 15 } $米)，其他天体就更加遥远，
 每颗恒星对行星的作用是非常小的。但是，如果宇宙是无限的，
