--- a/tex/body/M05.02-Cosmic Density Distribution.tex
+++ b/tex/body/M05.02-Cosmic Density Distribution.tex
@@ -2,7 +2,7 @@
 
 现在我们用哥白尼原理来分析宇宙中的密度分布。
 
-如图5.1，考虑两个典型的观察者$ O $及$ O' $，两者相对位置由矢
+如图\ref{fig:05.01}，考虑两个典型的观察者$ O $及$ O' $，两者相对位置由矢
 % 157.jpg
 量$ \vec{c} $描写。设$ O $观察者所看
 到的位于$ \vec{r} $处在$ t $时刻的星
