--- a/tex/body/M05.05-Cosmic Expansion Dynamics.tex
+++ b/tex/body/M05.05-Cosmic Expansion Dynamics.tex
@@ -87,7 +87,7 @@
 \begin{equation}\label{eqn:05.05.07}
   \left[ \frac { 1 } { R _ { 0 } } \left( \frac { \dif R } { \dif t } \right) \right] ^ { 2 } - \frac { 8 \uppi G } { 3 } \rho _ 0 \frac { 1 } {\left( \dfrac { R } { R _ { 0 } }\right)} = K
 \end{equation}
-其中$ K $表示积分常数，我们分以下两种花况讨论式\eqref{eqn:05.05.07}。
+其中$ K $表示积分常数，我们分以下两种情况讨论式\eqref{eqn:05.05.07}。
 
 (1) $ K > 0 $时，由式\eqref{eqn:05.05.07}得到
 \begin{equation}\label{eqn:05.05.08}
