--- a/tex/body/F04-Foreword.tex
+++ b/tex/body/F04-Foreword.tex
@@ -32,8 +32,8 @@
 从“物理的基石”这一标准来组织教学，它至少有以下两方面的
 含义：一是不断用新的现代的观点去整理老的内容，一是不断用新
 的前沿的重要成果来充实基础。事实上，不同时代的教材的差别，
-最清楚地表现在这些方面。上进的标准，也就是我们在编写这本
-教材时，尝试着击追求的。也许有的地方达到了，也许有的地方%分页处
+最清楚地表现在这些方面。上述的标准，也就是我们在编写这本
+教材时，尝试着去追求的。也许有的地方达到了，也许有的地方%分页处
 并未达到。无论成功或失败，它都是我们的追求的记录。
 
 为了使用上的方便，书中编辑了一些例题，每章末也附有一
