--- a/tex/body/M00.00-Introduction.tex
+++ b/tex/body/M00.00-Introduction.tex
@@ -56,7 +56,7 @@
 间、空间的概念，所以时空也是一种物理研究的对象，另一类现
 象是电、磁和光，所有这些物理对象。在二十世纪之前，人们都
 已知道了。二十世纪以来，又逐渐证实或发现一些新的对象。如
-原予、原子核、核子以及夸克等。
+原子、原子核、核子以及夸克等。
 
 \clearpage
 表\ref{tab:00.01}~的其余部分就表示物理学在寻求统一，寻求完整的因果
