--- a/tex/body/M01.03-Length.tex
+++ b/tex/body/M01.03-Length.tex
@@ -5,7 +5,7 @@
 对长度的测量，在日常的范围中，是用各种各样的尺，如米
 尺、千分尺、螺旋测微计等等。对于不能用尺直接加以测量的小
 尺度，可以求助于光学方法。在精密机床上常有光学测量装置；
-测定胰岛索中原子的位置，是用X衍射方法。对于大的尺度，
+测定胰岛素中原子的位置，是用X衍射方法。对于大的尺度，
 也不能直接用尺去测量，也要求助于光。测量月亮与地球的距离
 可以用激光测距的方法；测量一些不太远的恒星，可以用三角学
 方法，利用恒星发出的光。至于银河系之外的遥远天体的距离，
